--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,11 @@
                 <configuration>
                     <fork>true</fork>
                 </configuration>
-
+            </plugin>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
             </plugin>
         </plugins>
     </build>
