--- a/src/main/resources/application-edwin.yml
+++ b/src/main/resources/application-edwin.yml
@@ -7,7 +7,7 @@ spring:
         name: test
         url: jdbc:mysql://${mysql.host}:${mysql.port}/db1?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
         username: root
-        password: 123456
+        password: root
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
         filters: stat
